<resources>
    <string name="app_name">AppDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_fullname">Enter fullname</string>
    <string name="enter_adress">Enter adress</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="enter_phonenumber">Enter phone number</string>
    <string name="what_do_you_think">What is on your mind?</string>
    <string name="no_data">No Data!</string>
    <string name="datetime">Datetime</string>
    <string name="status_content">Status content</string>
    <string name="_0">0</string>
    <string name="numberLike">Like</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="edit_status">Edit status</string>
    <string name="delete_status">Delete status</string>
    <string name="delete">Do you want to delete this status?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">CANCEL</string>
    <string name="name_ques">Do you want to name for this group?\nIf answer is yes, please enter it on this box.</string>
</resources>
