<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin20"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/custom_edittext_boder"
        android:hint="@string/enter_username"
        android:paddingStart="@dimen/margin15"
        android:paddingEnd="@dimen/margin15"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/custom_edittext_boder"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin15"
        android:paddingEnd="@dimen/margin15"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <EditText
        android:id="@+id/re_edtPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/custom_edittext_boder"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin15"
        android:paddingEnd="@dimen/margin15"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/custom_edittext_boder"
        android:hint="@string/enter_fullname"
        android:paddingStart="@dimen/margin15"
        android:paddingEnd="@dimen/margin15"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <EditText
        android:id="@+id/edtDoB"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/custom_edittext_boder"
        android:hint="@string/enter_date_of_birth"
        android:paddingStart="@dimen/margin15"
        android:paddingEnd="@dimen/margin15"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <EditText
        android:id="@+id/edtAdress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/custom_edittext_boder"
        android:hint="@string/enter_adress"
        android:paddingStart="@dimen/margin15"
        android:paddingEnd="@dimen/margin15"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin40"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:background="@drawable/custom_edittext_boder"
        android:hint="@string/enter_phonenumber"
        android:paddingStart="@dimen/margin15"
        android:paddingEnd="@dimen/margin15"
        android:textColor="@color/black"
        android:textSize="@dimen/font20" />

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin20"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginEnd="@dimen/margin20"
            android:layout_marginBottom="@dimen/margin20"
            android:background="@drawable/custom_button_effect"
            android:text="@string/register"
            android:textColor="@color/white" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginBottom="@dimen/margin20"
            android:indeterminateDrawable="@drawable/custom_progress_bar"/>
    </ViewFlipper>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>