<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="@dimen/margin10"
    android:layout_marginRight="5dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_ava"
            android:layout_width="76dp"
            android:layout_height="63dp"
            android:layout_marginStart="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:src="@drawable/backgr"
            app:civ_border_color="@color/black"
            app:civ_border_width="0.5dp" />

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_ava"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/enter_username"
                android:textColor="@color/black"
                android:textSize="@dimen/font17"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/datetime"
                android:textSize="@dimen/font15" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="@dimen/margin20"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin10"
            android:layout_toRightOf="@+id/line"
            android:gravity="right"
            android:paddingRight="@dimen/margin15"
            android:text="&#8942;"
            android:textSize="@dimen/font20"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_ava"
            android:layout_marginStart="@dimen/margin15"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginEnd="@dimen/margin15"
            android:text="@string/status_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font15" />

        <LinearLayout
            android:id="@+id/LinerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_content"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/iv_countlove"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin10"
                    android:src="@drawable/icon_heart_red" />

                <TextView
                    android:id="@+id/tv_numberLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numberLike" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin15"
                android:layoutDirection="rtl">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin5"
                    android:text="@string/comment" />

                <TextView
                    android:id="@+id/tv_countComment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin5"
                    android:text="@string/_0" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/LinerLayout"
            android:layout_margin="@dimen/margin5"
            android:background="@color/greylite1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinerLayout"
            android:layout_marginTop="@dimen/margin5"
            android:orientation="horizontal"
            android:padding="@dimen/margin5">

            <LinearLayout
                android:id="@+id/itemLike"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/custom_like_click">

                <ImageView
                    android:id="@+id/iv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_heart_black"
                    android:padding="@dimen/margin5" />

                <TextView
                    android:id="@+id/tv_like"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin5"
                    android:text="@string/like"
                    android:textColor="@color/black" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/itemComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/custom_like_click">

                <ImageView
                    android:id="@+id/iv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin5"
                    android:src="@drawable/icon_cmt" />

                <TextView
                    android:id="@+id/tv_cmt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin5"
                    android:text="@string/comment"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/custom_like_click">

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin5"
                    android:src="@drawable/icon_share" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin5"
                    android:text="@string/share"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>